Fix - Content break on mobile view

--- a/assets/stylesheet/scss/style.scss
+++ b/assets/stylesheet/scss/style.scss
@@ -40,6 +40,8 @@ table {
       height: 40px;
       width: 40px;
       border-radius: 100%;
+      object-fit: cover;
+      object-position: bottom;
     }
   }
 
@@ -78,6 +80,8 @@ table {
   }
 
   .status {
+    display: flex;
+    align-items: center;
     font-weight: 500;
     color: #141726;
 
@@ -99,6 +103,8 @@ table {
   }
 
   .social-profile {
+    display: flex;
+
     ion-icon {
       font-size: 18px;
       margin-right: 2px;
@@ -122,6 +128,11 @@ table {
     .arrow-down {
       color: #e44745;
     }
+  }
+
+  .last-login {
+    display: flex;
+    width: max-content;
   }
 
   .more-icon {
